<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/text_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/welcome_word"
        android:textAlignment="center"
        android:textColor="@color/app_green"
        android:textSize="32sp" />

    <androidx.cardview.widget.CardView
        style="@style/general_main_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/app_whit"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_name_id"
                style="@style/general_signUp_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_full_name"
                android:importantForAutofill="yes"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_text_email_id"
                style="@style/general_signUp_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email_address"
                android:importantForAutofill="yes"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edit_text_password_id"
                style="@style/general_signUp_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
            <TextView
                android:id="@+id/wrong_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrong_pass"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/edit_text_conf_password_id"
                style="@style/general_signUp_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/conf_your_password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/wrong_conf_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/wrong_pass"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        style="@style/general_main_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/app_green"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:onClick="page_two"
            android:text="@string/login"
            android:textColor="@color/app_whit" />
    </androidx.cardview.widget.CardView>

</LinearLayout>